<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutActivity">

    <TextView
        style="@style/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/about" />

    <ImageView
        android:id="@+id/about_back"
        android:layout_width="11dp"
        android:layout_height="18dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_back" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:src="@drawable/crop_20a7dc7fbd29d679b456fa0f77bd9525d" />

    <TextView
        android:id="@+id/app_name"
        style="@style/FirstFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/becast" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/goodView"
        style="@style/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="57dp"
        android:text="@string/good" />

    <TextView
        android:id="@+id/shareApp"
        style="@style/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goodView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        android:text="@string/shareApp" />

    <TextView
        style="@style/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareApp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        android:text="@string/contactUs" />
</RelativeLayout>