<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="@drawable/item_firstfragment">

    <ImageView
        android:id="@+id/firstFragment_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/assa" />

    <TextView
        android:id="@+id/firstFragment_title"
        style="@style/FirstFragmentItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="22dp"
        android:maxLines="1"
        android:text="@string/title" />

    <TextView
        android:id="@+id/firstFragment_name"
        style="@style/FirstFragmentItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstFragment_title"
        android:layout_marginStart="135dp"
        android:layout_marginTop="17dp"
        android:maxLines="1"
        android:text="@string/a" />

    <TextView
        android:id="@+id/firstFragment_time"
        style="@style/FirstFragmentItemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="96dp"
        android:maxLines="1"
        android:text="@string/a" />
</RelativeLayout>
