<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".tour.TourFragment">

        <TextView
            style="@style/mefragmenttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/tour"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/witheback"
            android:contentDescription="@string/todo"
            android:src="@drawable/vector_drawable_leaderboard" />

        <TextView
            android:id="@+id/rank_text"
            style="@style/tourRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="50dp"
            android:text="@string/rank"
            tools:ignore="RelativeOverlap" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/tour_rank_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rank_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp">

        </android.support.v7.widget.RecyclerView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tour_rank_recycler"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/vector_drawable_choice" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/choose_text"
            style="@style/tourRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tour_rank_recycler"
            android:layout_marginStart="33dp"
            android:layout_marginTop="30dp"
            android:text="@string/choose" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tour_fragment_choose_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/choose_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/tour_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/vector_drawable_search" />

        <RelativeLayout
            android:id="@+id/search_area"
            android:layout_width="match_parent"
            android:layout_height="610dp"
            android:background="@drawable/witheback"
            android:visibility="gone">

            <SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="19dp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
